--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url('https://fonts.cdnfonts.com/css/avenir');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Avenir', sans-serif;
   color: #04172a;
 }
 
